<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.ReportProblemOrderActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numberOrder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/prod_number"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:maxLength="40"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:hint="@string/what_order"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="20"
        android:maxLength="40"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOrder"/>

    <TextView
        android:id="@+id/titlePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic_problem"
        android:textColor="@color/text_green"
        android:textSize="14sp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#fdfd96"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/picture"
        android:textColor="@color/black"
        android:id="@+id/btPhoto"
        app:layout_constraintTop_toBottomOf="@id/titlePhoto"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#fdfd96"
        android:text="@string/send_problem"
        android:textColor="@color/black"
        android:id="@+id/btReport"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>