<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.RestaurantActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_order"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcdonalds"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bigmac"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_value50"
        android:textColor="@color/text_green"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#fdfd96"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:id="@+id/btShare"
        app:layout_constraintBottom_toTopOf="@id/btTracking"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#fdfd96"
        android:text="@string/locate"
        android:textColor="@color/black"
        android:id="@+id/btTracking"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>