<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="24dp"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_galleria"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:textColor="#ffffff"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:hint="@string/name"
        android:textColor="#ffffff"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/password"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FDFD96"
        android:text="@string/sign"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:id="@+id/btSignup" />

</androidx.constraintlayout.widget.ConstraintLayout>