<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.MuseumActivity">

    <ImageView
        android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@color/primary"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/food"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bigmac"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_value50"
        android:textColor="@color/text_green"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#fdfd96"
        android:text="@string/order_finish"
        android:textColor="@color/black"
        android:id="@+id/btOrder"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>