<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.RestaurantActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcdonalds"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_35"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avaliation_49"
        android:textColor="@color/text_green"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oferts"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/stats"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/list"/>

</androidx.constraintlayout.widget.ConstraintLayout>